--- a/example.ipynb
+++ b/example.ipynb
@@ -6,19 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
     "from AnastrisTNG import TNGsimulation,TNGtools,Anatools\n",
     "import numpy as np\n",
-    "import scipy\n",
-    "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
-    "import h5py\n",
     "import scienceplots\n",
-    "plt.style.use(['science','no-latex'])\n",
-    "from scipy.stats import moment\n",
-    "import pynbody\n",
-    "import pandas as pd"
+    "plt.style.use(['science','no-latex'])"
    ]
   },
   {
@@ -28,6 +20,13 @@
    "outputs": [],
    "source": [
     "import gal1d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 载入需要拟合的数据"
    ]
   },
   {
@@ -81,6 +80,13 @@
    ],
    "source": [
     "sub.R_vir(200)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 拟合profile，有些profile参数过多，需要将BOUND范围设置小一些"
    ]
   },
   {
@@ -226,6 +232,13 @@
     "for i in ein.keys():\n",
     "    print(i,ein[i])\n",
     "ein.formular()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 半径以内的所有质量"
    ]
   },
   {
@@ -428,6 +441,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 拟合以及表达式"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -496,6 +516,13 @@
     "for i in exp.keys():\n",
     "    print(i,exp[i])\n",
     "exp.formular()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 所有质量"
    ]
   },
   {
@@ -584,6 +611,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 拟合多成分的曲线，用MultiProfiles，add_profile"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -664,6 +698,13 @@
     "plt.legend()\n",
     "plt.yscale('log')\n",
     "plt.ylim(1e6,1e9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 半径以内的质量，以及各个成分的质量占比"
    ]
   },
   {
