--- a/example.ipynb
+++ b/example.ipynb
@@ -98,11 +98,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "density_scale_radius 326511.0836496355\n",
-      "scale_radius 64.8606037259217\n",
-      "alpha 1.5402446398868617\n",
-      "beta 8.217590060959395\n",
-      "gamma 1.4720791781120428\n"
+      "density_scale_radius 326511.08367511455\n",
+      "scale_radius 64.86060372597566\n",
+      "alpha 1.5402446398577614\n",
+      "beta 8.217590060949036\n",
+      "gamma 1.4720791780793774\n",
+      "AIC 1018625.345688369\n"
      ]
     },
     {
@@ -111,7 +112,7 @@
        "$$\\rho(r) = \\frac{\\rho_{s}r_s^{\\beta}}{r^{\\alpha}(r_s^{\\gamma}+r^{\\gamma})^{\\frac{\\beta-\\alpha}{\\gamma}}}$$"
       ],
       "text/plain": [
-       "<gal1d.theoretical_profiles.base_utils.Latex_print at 0x7ff54678c460>"
+       "<gal1d.theoretical_profiles.base_utils.Latex_print at 0x7fa19364c640>"
       ]
      },
      "execution_count": 7,
@@ -120,12 +121,14 @@
     }
    ],
    "source": [
+    "\n",
     "gal1d.DoublePowerLawProfile.BOUND['alpha']=[0,5]\n",
     "gal1d.DoublePowerLawProfile.BOUND['beta']=[0,10]\n",
     "gal1d.DoublePowerLawProfile.BOUND['gamma']=[0,5]\n",
     "dou,jic = gal1d.DoublePowerLawProfile.fit(rdm,rhodm,use_analytical_jac=True)\n",
     "for i in dou.keys():\n",
     "    print(i,dou[i])\n",
+    "print('AIC',dou.AIC(rdm,rhodm))\n",
     "dou.formular()"
    ]
   },
@@ -138,8 +141,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scale_radius 5.607186007282391\n",
-      "density_scale_radius 57163184.00583833\n"
+      "scale_radius 5.607186007332322\n",
+      "density_scale_radius 57163184.004513636\n",
+      "AIC 24366010.424394455\n"
      ]
     },
     {
@@ -148,7 +152,7 @@
        "$$\\rho(r) = \\frac{\\rho_{s}}{(r / r_s)(1+(r / r_s))^2}$$"
       ],
       "text/plain": [
-       "<gal1d.theoretical_profiles.base_utils.Latex_print at 0x7ff5467a0040>"
+       "<gal1d.theoretical_profiles.base_utils.Latex_print at 0x7fa042b39460>"
       ]
      },
      "execution_count": 8,
@@ -160,6 +164,7 @@
     "nfw,jic = gal1d.NFWProfile.fit(rdm,rhodm,use_analytical_jac=True)\n",
     "for i in nfw.keys():\n",
     "    print(i,nfw[i])\n",
+    "print('AIC',nfw.AIC(rdm,rhodm))\n",
     "nfw.formular()"
    ]
   },
@@ -172,9 +177,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "density_scale_radius 98609355.66346364\n",
-      "scale_radius 4.676146416620004\n",
-      "gamma 0.6793460964797394\n"
+      "density_scale_radius 98609355.66739245\n",
+      "scale_radius 4.676146416559958\n",
+      "gamma 0.6793460964475361\n",
+      "AIC 10627656.661695775\n"
      ]
     },
     {
@@ -183,7 +189,7 @@
        "$$\\rho(r) = \\frac{\\rho_{s}}{(r / r_s)^{\\gamma}(1+(r / r_s))^{3-\\gamma}}$$"
       ],
       "text/plain": [
-       "<gal1d.theoretical_profiles.base_utils.Latex_print at 0x7ff5467a0700>"
+       "<gal1d.theoretical_profiles.base_utils.Latex_print at 0x7fa042ad3a00>"
       ]
      },
      "execution_count": 9,
@@ -195,21 +201,23 @@
     "gnfw,jic = gal1d.GNFWProfile.fit(rdm,rhodm,use_analytical_jac=True)\n",
     "for i in gnfw.keys():\n",
     "    print(i,gnfw[i])\n",
+    "print('AIC',gnfw.AIC(rdm,rhodm))\n",
     "gnfw.formular()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "density_scale_radius 5270812.220130537\n",
-      "scale_radius 9.466544963675743\n",
-      "Einasto_index 2.5365183314795994\n"
+      "density_scale_radius 5270812.220235051\n",
+      "scale_radius 9.46654496357204\n",
+      "Einasto_index 2.5365183315201922\n",
+      "AIC 11920284.712418282\n"
      ]
     },
     {
@@ -218,7 +226,7 @@
        "$$\\rho(r) = \\rho_s \\mathrm{exp}\\{- 2n [(\\frac{r}{r_s})^{\\frac{1}{n}}-1]\\}$$"
       ],
       "text/plain": [
-       "<gal1d.theoretical_profiles.base_utils.Latex_print at 0x7ff5467a0e80>"
+       "<gal1d.theoretical_profiles.base_utils.Latex_print at 0x7fa042ad3670>"
       ]
      },
      "execution_count": 10,
@@ -230,6 +238,7 @@
     "ein,jic = gal1d.EinastoProfile.fit(rdm,rhodm,use_analytical_jac=False)\n",
     "for i in ein.keys():\n",
     "    print(i,ein[i])\n",
+    "print('AIC',ein.AIC(rdm,rhodm))\n",
     "ein.formular()"
    ]
   },
@@ -242,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
